--- a/index.html
+++ b/index.html
@@ -10,50 +10,65 @@
     <header>
       <h1>Web Development History</h1>
     </header>
-    <nav>
-      <ul>
-        <li>
-          <a href="#" id="precursor-link"
-            >The Precursor to the Web (Pre-1990s)</a
-          >
-        </li>
-        <li>
-          <a href="#" id="birth-link">The Birth of the Web (Early 1990s)</a>
-        </li>
-        <li>
-          <a href="#" id="dotcom-link"
-            >The Dot-com Boom and Web 1.0 (Late 1990s)</a
-          >
-        </li>
-        <li>
-          <a href="#" id="standards-link"
-            >Web Standards and CSS (Late 1990s - Early 2000s)</a
-          >
-        </li>
-        <li>
-          <a href="#" id="web2-link"
-            >Web 2.0 and the Rise of Interactivity (Mid-2000s)</a
-          >
-        </li>
-        <li>
-          <a href="#" id="mobile-link"
-            >Mobile Web and Responsive Design (2010s)</a
-          >
-        </li>
-        <li>
-          <a href="#" id="modern-link">Modern Web Technologies (2020s)</a>
-        </li>
-        <li>
-          <a href="#" id="accessibility-security-link"
-            >Web Accessibility and Security</a
-          >
-        </li>
-      </ul>
-    </nav>
+    <div class="flex-container">
+      <div id="nav-div">
+        <nav>
+          <h2>Explore Web Development Eras</h2>
+          <p>
+            Welcome to Web Development History! This webpage takes you on a
+            journey through the evolution of web development. Click on the links
+            below to learn about different eras and significant milestones.
+          </p>
+          <ul>
+            <li>
+              <a href="#" id="precursor-link"
+                >The Precursor to the Web (Pre-1990s)</a
+              >
+            </li>
+            <li>
+              <a href="#" id="birth-link">The Birth of the Web (Early 1990s)</a>
+            </li>
+            <li>
+              <a href="#" id="dotcom-link"
+                >The Dot-com Boom and Web 1.0 (Late 1990s)</a
+              >
+            </li>
+            <li>
+              <a href="#" id="standards-link"
+                >Web Standards and CSS (Late 1990s - Early 2000s)</a
+              >
+            </li>
+            <li>
+              <a href="#" id="web2-link"
+                >Web 2.0 and the Rise of Interactivity (Mid-2000s)</a
+              >
+            </li>
+            <li>
+              <a href="#" id="mobile-link"
+                >Mobile Web and Responsive Design (2010s)</a
+              >
+            </li>
+            <li>
+              <a href="#" id="modern-link">Modern Web Technologies (2020s)</a>
+            </li>
+            <li>
+              <a href="#" id="accessibility-security-link"
+                >Web Accessibility and Security</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div id="img-div">
+        <img src="screenshot.png" alt="Web Development History" />
+      </div>
+    </div>
     <main id="content">
-      <p>Select a topic from the navigation to learn more.</p>
+      <h2>Welcome to Web Development History</h2>
+      <p>Select a topic to begin your exploration.</p>
     </main>
-    <footer>
+    <br /><br /><br />
+    <footer style="text-align: center">
       <p>&copy; 2023 Web Development History</p>
     </footer>
     <script src="script.js"></script>
